--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,8 @@ header button:hover {
   background: var(--text);
 }
 .button_container span {
+  box-shadow: 0px 0px 5px 0px var(--accent);
   background: var(--background);
-  border: none;
   height: 5px;
   width: 120%;
   border-radius: 10px;
@@ -139,6 +139,7 @@ header button:hover {
   left: 0;
   transition: all .35s ease;
   cursor: pointer;
+  
 }
 .button_container span:nth-of-type(2) {
   top: 11px;
@@ -329,12 +330,16 @@ header button:hover {
 }
 
 .ellipse {
-  width: 309px;
-  height: 309px;
-  border-radius: 309px;
-  background: #d9d9d9;
+  width: 17em;
+  height: 17em;
 }
 
+.cercle {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  object-fit: cover;
+}
 
 .row {
   width: 100%;
