--- a/css/admistyle.css
+++ b/css/admistyle.css
@@ -130,7 +130,7 @@ header button:hover {
   background: var(--text);
 }
 .button_container span {
-  box-shadow: 0px 0px 5px 0px var(--accent);
+  box-shadow: 0px 0px 5px 0px var(--primary);
   background: var(--background);
   height: 5px;
   width: 120%;
@@ -252,7 +252,6 @@ header button:hover {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  padding: 5%;
 }
 
 .section_1 {
@@ -262,9 +261,41 @@ header button:hover {
   font-family: Poppins;
   font-size: 1.5em;
   width: 100%;
-  margin: 10% 5% 10% 5%;
+  margin: 3% 1% 3% 1%;
 }
 
+.butcam {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding: 5%;
+}
+
+.butcam button {
+  display: flex;
+  padding: 0.8em 0.7em;
+  justify-content: center;
+  align-items: center;
+  border-radius: 28px;
+  border: none;
+  background: var(--text);
+  color: var(--background);
+  margin-left: 2em;
+  cursor: pointer;
+
+  text-align: center;
+  font-family: Poppins;
+  font-size: 1.2em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.butcam button:hover {
+  scale: 1.1;
+  transition: ease-in-out 0.3s;
+}
 .section_1 h2 {
   color: var(--secondary);
   font-family: Teko;
@@ -276,123 +307,13 @@ header button:hover {
   margin: 0 0 0 5%;
 }
 
-.section_1 p {
-  color: var(--text);
-  font-family: poppins;
-  font-size: 0.7em;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 2%;
-  margin: 0 0 0 5%;
-}
-
-.img1 {
-  width: 85%;
-  height: 85%;
-  border-radius: 30px;
-  margin-right: 2em;
-}
-
-/*deuxième partie*/
-
-.section_2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  background-image: var(--gradient_v);
-  padding: 8%;
-}
-
-.title {
-  color: var(--background);
-  font-family: Teko;
-  font-size: 2em;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 2%;
-  margin: 0 0 0 5%;
-}
-
-.pres {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.section_2 h3 {
-  color: #fff;
-  text-align: center;
-  font-family: Poppins;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 0.6px;
-}
-
-.ellipse {
-  width: 17em;
-  height: 17em;
-}
-
-.cercle {
-  width: 100%;
-  height: 100%;
-  border-radius: 100%;
-  object-fit: cover;
-}
-
-.row {
-  width: 100%;
-  height: 100%;
+.contenu {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  gap: 50px;
-}
-
-.section_3 {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  padding: 5%;
-}
-
-.section_3 h2 {
-  color: var(--primary);
-  font-family: Teko;
-  font-size: 3em;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 2%;
-  margin: 1% 0 0 0;
-  text-align: center;
-}
-
-.section_3 p {
-  width: 70%;
-  color: var(--text);
-  font-family: poppins;
-  font-size: 1em;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 2%;
-  margin: 0;
-  text-align: center;
-}
-
-.section_3 img {
-  width: 70%;
-  height: 85%;
-  border-radius: 30px;
-  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-left: 7%;
 }
 
 footer {
@@ -445,31 +366,5 @@ a {
   border-radius: 500px;
   overflow: hidden;
   background: var(--primary);
-  filter: blur(100px);
-}
-
-.blurball3 {
-  position: absolute;
-  left: 0;
-  z-index: -1;
-  top: 200%;
-  width: 600px;
-  height: 600px;
-  border-radius: 600px;
-  overflow: hidden;
-  background: var(--secondary);
-  filter: blur(70px);
-}
-
-.blurball4 {
-  position: absolute;
-  right: 0;
-  z-index: -1;
-  top: 280%;
-  width: 500px;
-  height: 500px;
-  border-radius: 500px;
-  overflow: hidden;
-  background: var(--secondary);
   filter: blur(100px);
 }
