--- a/css/admistyle.css
+++ b/css/admistyle.css
@@ -121,6 +121,7 @@ header button:hover {
   cursor: pointer;
   z-index: 100;
   transition: opacity 0.25s ease;
+  z-index: 1000;
 }
 .button_container:hover {
   opacity: 0.7;
@@ -172,6 +173,7 @@ header button:hover {
   opacity: 0.9;
   visibility: visible;
   height: 100%;
+  z-index: 999;
 }
 .overlay.open li {
   animation: fadeInRight 0.5s ease forwards;
