--- a/css/femme.css
+++ b/css/femme.css
@@ -65,6 +65,31 @@ body {
   height: 100%;
 }
 
+.scale-up-center {
+  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+          animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+@-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+} 
 /*header */
 
 header {
@@ -128,6 +153,7 @@ header button:hover {
   cursor: pointer;
   z-index: 100;
   transition: opacity 0.25s ease;
+  z-index: 1000;
 }
 .button_container:hover {
   opacity: 0.7;
@@ -174,11 +200,13 @@ header button:hover {
   visibility: hidden;
   transition: opacity 0.35s, visibility 0.35s, height 0.35s;
   overflow: hidden;
+  z-index: 1000;
 }
 .overlay.open {
   opacity: 0.9;
   visibility: visible;
   height: 100%;
+  z-index: 999;
 }
 .overlay.open li {
   animation: fadeInRight 0.5s ease forwards;
@@ -290,7 +318,7 @@ header button:hover {
   font-weight: 600;
   line-height: normal;
   letter-spacing: 2%;
-  margin: 0 0 0 5%;
+  margin: 1%;
   margin-right: 2em;
 }
 
@@ -301,25 +329,33 @@ header button:hover {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  margin: 0 0 0 5%;
+  margin: 2%;
   margin-right: 2em;
 }
 
 .canva {
   display: flex;
   flex-direction: row;
-  border: red solid 1px;
+  border: var(--text) solid 0.1em;
+  background-color: var(--background);
+  box-shadow: inset 0px 0px 25px 0px var(--text);
   width: 70em;
-  height: 30em;
-  border-radius: 20px;
+  height:auto;
+  border-radius: 28px;
+  margin: 2%  5%  0%  5%;
 }
 
 #femme,
 #homme {
-  border: red solid 1px;
   width: 50%;
   height: 100%;
 }
+
+#femme img,
+#homme img{
+  transition: ease-in 1s;
+}
+
 
 footer {
   display: flex;
@@ -362,6 +398,7 @@ a {
   font-size: 4em;
   margin: 2%;
   margin-right: 1.5em;
+  margin-bottom: 5%;
 
 }
 
@@ -390,3 +427,36 @@ a {
   background: var(--secondary);
   filter: blur(100px);
 }
+.but{
+  display: flex;
+  flex-direction: row;
+}
+
+#but2020, #but2021, #but2022{
+  display: flex;
+  padding: 0.8em 0.7em;
+  justify-content: center;
+  align-items: center;
+  border-radius: 28px;
+  border: solid 0.05em var(--text);
+  background: var(--background);
+  color: var(--text);
+  box-shadow: inset 1px 1px 10px 1px var(--text);
+  margin-left: 2em;
+  mix-blend-mode: hard-light;
+  cursor: pointer;
+
+  text-align: center;
+  font-family: Poppins;
+  font-size: 1.2em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+#but2020:hover, #but2021:hover, #but2022:hover{
+  scale : 0.9;
+  transition:ease-in-out 0.3s;
+}
+
+
