--- a/css/envi.css
+++ b/css/envi.css
@@ -1,7 +1,53 @@
 /*import et root+html*/
-
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Karla:wght@800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
+
+@media screen and (max-width: 1023px) {
+  * {
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin: 0;
+height: auto;
+text-align: center;
+  }
+
+  .container{
+    flex-direction: column-reverse;
+  }
+
+  .section_1 p{
+        width: 85%;
+  }
+
+  .button_container{
+    top:3.5%;
+  }
+  }
+
+  @media screen and (max-width:767px) {
+    * {
+      flex-wrap: wrap;
+      flex-direction: column;
+      margin: 0;
+  height: auto;
+  text-align: center;
+    }
+  
+    .container{
+      flex-direction: column;
+    }
+  
+    .section_1{
+      flex-direction: row;
+    }
+  
+    .button_container{
+      top:3.5%;
+    }
+    }
+  
+
+
 
 @keyframes moveInLeft {
   0% {
@@ -121,7 +167,6 @@ header button:hover {
   cursor: pointer;
   z-index: 100;
   transition: opacity 0.25s ease;
-  z-index: 1000;
 }
 .button_container:hover {
   opacity: 0.7;
@@ -173,7 +218,6 @@ header button:hover {
   opacity: 0.9;
   visibility: visible;
   height: 100%;
-  z-index: 999;
 }
 .overlay.open li {
   animation: fadeInRight 0.5s ease forwards;
@@ -262,6 +306,8 @@ header button:hover {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  padding: 0% 5% 2% 5%;
+  flex-wrap: nowrap;
 }
 
 .section_1 {
@@ -271,43 +317,9 @@ header button:hover {
   font-family: Poppins;
   font-size: 1.5em;
   width: 100%;
-  margin: 3% 1% 3% 1%;
+  margin: 10% 0% 10% 5%;
 }
 
-.butcam {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  padding: 5%;
-}
-
-.butcam button {
-  display: flex;
-  padding: 0.8em 0.7em;
-  justify-content: center;
-  align-items: center;
-  border-radius: 28px;
-  border: none;
-  background: var(--accent);
-  color: var(--background);
-  margin-left: 2em;
-  cursor: pointer;
-
-  text-align: center;
-  font-family: Poppins;
-  font-size: 1.2em;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-
-.butcam button:hover {
-  scale: 1.1;
-  transition: ease-in-out 0.3s;
-  background-color: var(--text);
-  color: var(--background);
-}
 .section_1 h2 {
   color: var(--secondary);
   font-family: Teko;
@@ -319,14 +331,98 @@ header button:hover {
   margin: 0 0 0 5%;
 }
 
-.contenu {
+.section_1 p {
+  color: var(--text);
+  font-family: poppins;
+  font-size: 0.7em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 2%;
+  margin: 0 0 0 5%;
+  width: 70%;
+}
+
+.section_1_1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width:100%;
+}
+.section_1_1 a{
+  text-decoration:wavy;
+  color: var(--text);
+  font-family: poppins;
+  font-size: 2em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 2%;
+  width: 50%;
+  margin-top: 5%;
+}
+
+.img1 {
+  width: 85%;
+  height: 85%;
+  border-radius: 30px;
+  margin-right: 2em;
+}
+
+/*deuxième partie*/
+
+.section_2 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  width: 100%;
-  margin-left: 7%;
+  justify-content: space-around;
+  background-image: var(--gradient_v);
+  padding: 8%;
+  flex-wrap: nowrap;
 }
+
+.section_2 img{
+  width: 50%;
+  height: 50%;
+  border-radius: 30px;
+}
+
+.title {
+  color: var(--background);
+  font-family: Teko;
+  font-size: 2em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 2%;
+  margin: 0 0 0 5%;
+}
+
+.section_2 h3 {
+  color: var(--background);
+  font-family: Poppins;
+  font-size: 0.7em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.6px;
+}
+.section_2 a{
+  text-decoration: none;
+  color: var(--accent);
+  font-family: Teko;
+  font-size: 1.2em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.6px;
+}
+
+a::after{
+  color:var(--accent);
+}
+
 
 footer {
   display: flex;
@@ -380,35 +476,3 @@ a {
   background: var(--primary);
   filter: blur(100px);
 }
-
-/*deuxième partie*/
-
-.section_2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  background-image: var(--gradient_v);
-  padding: 8%;
-  z-index: 1;
-}
-
-#table {
-  z-index: 1;
-}
-
-.toolTip {
-  position: absolute;
-  text-align: center;
-  width: auto;
-  height: auto;
-  padding: 1%;
-  font: 1em sans-serif;
-  background: var(--background);
-  color: var(--text);
-  border: none;
-  border-radius: 8px;
-  pointer-events: none;
-  opacity: 0.9;
-}
-
