--- a/css/femme.css
+++ b/css/femme.css
@@ -94,7 +94,7 @@ body {
 
 header {
   width: 100%;
-  background-image: var(--gradient_h);
+  background-image: var(--background);
 }
 
 #head {
@@ -107,7 +107,7 @@ header {
 header h1 {
   width: 100%;
   height: 100%;
-  color: var(--background);
+  color: var(--text);
   text-align: center;
   font-family: "Teko", sans-serif;
   font-size: 3em;
@@ -172,7 +172,7 @@ header button:hover {
 }
 .button_container span {
   box-shadow: 0px 0px 5px 0px var(--primary);
-  background: var(--background);
+  background: var(--text);
   height: 5px;
   width: 120%;
   border-radius: 10px;
@@ -319,7 +319,6 @@ header button:hover {
   line-height: normal;
   letter-spacing: 2%;
   margin: 1%;
-  margin-right: 2em;
 }
 
 .container h3 {
@@ -336,9 +335,10 @@ header button:hover {
 .canva {
   display: flex;
   flex-direction: row;
-  border: var(--text) solid 0.1em;
-  background-color: var(--background);
-  box-shadow: inset 0px 0px 25px 0px var(--text);
+  border: none;
+  background: var(--background);
+  box-shadow: inset 5px 5px 20px var(--text),
+              inset -5px -5px 20px #ffffff;
   width: 70em;
   height:auto;
   border-radius: 28px;
@@ -396,9 +396,8 @@ a {
   font-weight: 500;
   font-style: normal;
   font-size: 4em;
-  margin: 2%;
-  margin-right: 1.5em;
-  margin-bottom: 5%;
+  margin: 2% 5% 5% 5%;
+
 
 }
 
@@ -438,13 +437,13 @@ a {
   justify-content: center;
   align-items: center;
   border-radius: 28px;
-  border: solid 0.05em var(--text);
-  background: var(--background);
-  color: var(--text);
-  box-shadow: inset 1px 1px 10px 1px var(--text);
+  border: none;
+background: var(--background);
+box-shadow:  4px 4px 8px var(--text),
+             -4px -4px 8px #ffffff;
   margin-left: 2em;
-  mix-blend-mode: hard-light;
   cursor: pointer;
+  color: var(--text);
 
   text-align: center;
   font-family: Poppins;
@@ -456,7 +455,7 @@ a {
 
 #but2020:hover, #but2021:hover, #but2022:hover{
   scale : 0.9;
-  transition:ease-in-out 0.3s;
+  transition:ease-in-out 0.1s;
 }
 
 
