--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Karla:wght@800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1023px) {
   * {
     flex-wrap: wrap;
     flex-direction: column;
     margin: 0;
+height: auto;
+text-align: center;
   }
-}
+
+  .container{
+    flex-direction: column-reverse;
+  }
+
+  .section_1 p{
+        width: 85%;
+  }
+
+  .button_container{
+    top:3.5%;
+  }
+  }
+
+  @media screen and (max-width:767px) {
+    * {
+      flex-wrap: wrap;
+      flex-direction: column;
+      margin: 0;
+  height: auto;
+  text-align: center;
+    }
+  
+    .container{
+      flex-direction: column;
+    }
+  
+    .section_1{
+      flex-direction: row;
+    }
+  
+    .button_container{
+      top:3.5%;
+    }
+    }
+  
+
+
 
 @keyframes moveInLeft {
   0% {
@@ -69,7 +108,7 @@ body {
 
 header {
   width: 100%;
-  background-image: var(--gradient_h);
+  background-image: var(--background);
 }
 
 #head {
@@ -82,7 +121,7 @@ header {
 header h1 {
   width: 100%;
   height: 100%;
-  color: var(--background);
+  color: var(--text);
   text-align: center;
   font-family: "Teko", sans-serif;
   font-size: 3em;
@@ -146,7 +185,7 @@ header button:hover {
 }
 .button_container span {
   box-shadow: 0px 0px 5px 0px var(--primary);
-  background: var(--background);
+  background: var(--text);
   height: 5px;
   width: 120%;
   border-radius: 10px;
