--- a/css/style.css
+++ b/css/style.css
@@ -2,49 +2,50 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Karla:wght@800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
 
-@media screen and (max-width: 1023px) {
+@media only screen and (max-width: 600px){
   * {
     flex-wrap: wrap;
-    flex-direction: column;
-    margin: 0;
-height: auto;
-text-align: center;
+    justify-content: center;
+    font-size: 0.8em;
+    
   }
-
-  .container{
+  [class*="container"] {
+    display: flex;
     flex-direction: column-reverse;
+    width:auto;
+
   }
 
-  .section_1 p{
-        width: 85%;
-  }
+  [class*="section_2"] {
+    display: flex;
+    flex-direction: column;
+    width:auto;
+    font-size: 1em;
+    margin-top: 15%;
+    margin-bottom: 15%;
 
-  .button_container{
-    top:3.5%;
   }
-  }
+  [class*="section_3"] {
+    display: flex;
+    flex-direction: column;
+    width:auto;
+    margin-top: 15%;
+    margin-bottom: 15%;
 
-  @media screen and (max-width:767px) {
-    * {
-      flex-wrap: wrap;
-      flex-direction: column;
-      margin: 0;
-  height: auto;
-  text-align: center;
-    }
-  
-    .container{
-      flex-direction: column;
-    }
-  
-    .section_1{
-      flex-direction: row;
-    }
-  
-    .button_container{
-      top:3.5%;
-    }
-    }
+  }
+  [id="blurball1"] {
+    display: none;
+  }
+  [id="blurball2"] {
+    display: none;
+  }
+  [id="blurball3"] {
+    display: none;
+  }
+  [id="blurball4"] {
+    display: none;
+  }
+}
   
 
 
@@ -383,7 +384,7 @@ header button:hover {
   color: #fff;
   text-align: center;
   font-family: Poppins;
-  font-size: 20px;
+  font-size: 2em;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
