--- a/css/admistyle.css
+++ b/css/admistyle.css
@@ -3,6 +3,66 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Karla:wght@800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
 
+@media only screen and (max-width: 600px){
+  * {
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 0.8em;
+    
+  }
+  .container {
+    display: flex;
+    flex-direction: column-reverse !important;
+    width:auto;
+
+  }
+
+  .section_2 {
+    display: flex;
+    flex-direction: column;
+    width:auto;
+    font-size: 1em;
+    margin-top: 15%;
+    margin-bottom: 15%;
+
+  }
+  .section_3 {
+    display: flex;
+    flex-direction: column;
+    width:auto;
+    margin-top: 15%;
+    margin-bottom: 15%;}
+
+    .blurball1,.blurball2,.blurball3,.blurball4{
+      display: none !important;
+    }
+
+    #head{
+      flex-wrap: nowrap;
+      margin: 1em 1em 2em 1em ;
+    }
+    header h1{
+      margin: 0 2em 0 0 !important;
+    }
+
+    .button_container,.button_container.active{
+      top: 1% !important;
+      right: 3% !important;
+      width:30px !important;
+      height: 15px !important;
+    }
+
+    .gridjs, .gridjs-container{
+      width: 50% !important;
+      height: 50% !important;
+    }
+
+    .contenu{
+      margin:0% !important;
+    }
+ 
+}
+
 @keyframes moveInLeft {
   0% {
     opacity: 0;
