--- a/css/menstyle.css
+++ b/css/menstyle.css
@@ -2,13 +2,58 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Karla:wght@800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
 
-@media screen and (max-width: 800px) {
+@media only screen and (max-width: 600px){
   * {
     flex-wrap: wrap;
-    flex-direction: column;
-    margin: 0;
+    justify-content: center;
+    font-size: 0.8em;
+    
   }
+
+  .section_2 {
+    flex-direction: column !important;
+    font-size: 1em;
+    gap: 3em !important;
+
+  }
+
+  .section_2 video{
+    width:100%;
+  }
+
+.title, .section_2 h3{
+    font-size: 1em !important;
+    width: 100% !important;
+  }
+  .section_3 {
+    display: flex;
+    flex-direction: column;
+    width:auto;
+    margin-bottom: 5%;
+  }
+
+    .blurball1,.blurball2,.blurball3,.blurball4{
+      display: none !important;
+    }
+
+    #head{
+      flex-wrap: nowrap;
+      margin: 1em 1em 2em 1em ;
+    }
+    header h1{
+      margin: 0 2em 0 0 !important;
+    }
+
+    .button_container,.button_container.active{
+      top: 1% !important;
+      right: 3% !important;
+      width:30px !important;
+      height: 15px !important;
+    }
+  
 }
+  
+
 
 @keyframes moveInLeft {
   0% {
@@ -145,8 +190,7 @@ header button:hover {
   background: var(--text);
 }
 .button_container span {
-  box-shadow: 0px 0px 5px 0px var(--primary);
-  background: var(--background);
+  background: var(--text);
   height: 5px;
   width: 120%;
   border-radius: 10px;
@@ -289,7 +333,7 @@ header button:hover {
 }
 
 .section_2 h3 {
-  color: #fff;
+  color: var(--background);
   font-family: Poppins;
   font-size: 1em;
   font-style: normal;
