--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@
     font-size: 0.8em;
     
   }
-  [class*="container"] {
+  .container {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column-reverse !important;
     width:auto;
 
   }
 
-  [class*="section_2"] {
+  .section_2 {
     display: flex;
     flex-direction: column;
     width:auto;
@@ -25,26 +25,32 @@
     margin-bottom: 15%;
 
   }
-  [class*="section_3"] {
+  .section_3 {
     display: flex;
     flex-direction: column;
     width:auto;
     margin-top: 15%;
-    margin-bottom: 15%;
+    margin-bottom: 15%;}
 
-  }
-  [id="blurball1"] {
-    display: none;
-  }
-  [id="blurball2"] {
-    display: none;
-  }
-  [id="blurball3"] {
-    display: none;
-  }
-  [id="blurball4"] {
-    display: none;
-  }
+    .blurball1,.blurball2,.blurball3,.blurball4{
+      display: none !important;
+    }
+
+    #head{
+      flex-wrap: nowrap;
+      margin: 1em 1em 2em 1em ;
+    }
+    header h1{
+      margin: 0 2em 0 0 !important;
+    }
+
+    .button_container,.button_container.active{
+      top: 1% !important;
+      right: 3% !important;
+      width:30px !important;
+      height: 15px !important;
+    }
+  
 }
   
 
@@ -185,7 +191,6 @@ header button:hover {
   background: var(--text);
 }
 .button_container span {
-  box-shadow: 0px 0px 5px 0px var(--primary);
   background: var(--text);
   height: 5px;
   width: 120%;
